src/objects/LogFilter__mdt.object
<CustomObject>
    <description>Allow users to filter and replace content of log body using regular expressions</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegexToFind__c</fullName>
        <description>Regex to to search for (can also use plain text)</description>
        <label>Regex to Find</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegexToReplaceWith__c</fullName>
        <description>Regex to replace with in the event you use capture groups in Regex To Find field</description>
        <label>Regex To Replace With</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LogFilter</label>
    <pluralLabel>Log Filters</pluralLabel>
</CustomObject>